[tool.poetry]
name = "data-conversion"
version = "0.1.0"
description = ""
authors = ["Chris Birch <datapointchris@gmail.com>"]
readme = "README.md"
packages = [{include = "data_conversion"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
ipywidgets = "^8.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
pytest = "^7.4.1"
pre-commit = "^3.4.0"
pytest-cov = "^4.1.0"
python-tools = {git = "https://github.com/datapointchris/python-tools.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
